feat: ESLintルールの追加とコードのリファクタリング- ESLintルールに「@angular-eslint/use-lifecycle-interface」、「@angular-eslint/use-component-view-encapsulation」、「@typescript-eslint/explicit-member-accessibility」および「@angular-eslint/template/prefer-ngsrc」を追加- app.component.htmlから不要なコードを削除- app.component.tsで「ButtonModule」のインポートを削除し、「title」をパブリックに変更- app.module.tsで「AboutModule」のインポートを削除- random-home.component.htmlにボタンを追加し、random-home.component.tsで対応するメソッド「generateRandomNumber」を追加

--- a/src/app/routes/random/home/random-home.component.html
+++ b/src/app/routes/random/home/random-home.component.html
@@ -1,1 +1,4 @@
-<p>random works! {{ randomNumber }}</p>
+<main class="main">
+  <p-button label="Re generate" (click)="generateRandomNumber()"></p-button>
+  <p>random works! {{ randomNumber }}</p>
+</main>
